# T2BII

./: README.md
02 - MongoDB/: .env  app.py  consumer.py  data.jsonl  docker-compose.yml  dockerfile  producer.py  pyproject.toml
