[tool.poetry]
name = "02 - mongodb"
version = "0.1.0"
description = ""
authors = ["kenneth56 <kenneth@ripeta.com>"]
readme = "README.md"
packages = [{include = "02 _ mongodb"}]

[tool.poetry.dependencies]
python = "^3.8"
faker = "^24.1.0"
pymongo = "^4.6.3"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
